@@ -7,8 +7,8 @@
 ## Title: |ceb00f1tralce|r's Collectible Keybinds
 ## Description: Add keybindings for Tools, Assistants, Companions, and Mementos.
 ## Author: @tralce and @code65536
-## Version: 2022-01-28
-## APIVersion: 101031 101032
+## Version: 2022-03-29
+## APIVersion: 101033
 ## OptionalDependsOn: VotansKeybinder
 
 tralceCollectibles.lua
